Fixed scrollbar, styling changes

--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -56,6 +56,15 @@
   z-index: 2;
 }
 
+.btn-primary,
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:focus,
+.btn-primary:visited {
+  background-color: var(--primary--dim) !important;
+  outline: none !important;
+}
+
 #home-content {
   position: absolute;
   width: 100%;
